--- a/Python v3 Básico/MarkDown/3.3 Funciones.md
+++ b/Python v3 Básico/MarkDown/3.3 Funciones.md
@@ -138,3 +138,34 @@ def f(a, *, b, c): # Define 'b' y 'c' como keyword-only con el *
 print(a, b, c)  
 
 # Consideraciones de diseño al programar con funciones.
+- *Cohesión:*  
+Se refiere a como se descompone un programa en pequeñas tareas individuales.
+Cada función debe tener un único propósito, preferiblemente resumible en una frase corta.
+Las funciones deben ser pequeñas (idealmente, no más de una o dos docenas de líneas).  
+- *Acoplamiento:*  
+Las funciones deben comunicarse principalmente a través de argumentos y valores de retorno.
+Minimizar el uso de variables globales.
+Evitar modificar argumentos mutables a menos que sea intencional.
+No modificar atributos de otros módulos directamente.   
+
+**Un buen código está altamente cohesionado y tiene poco acoplamiento.**  
+Es decir, todas las funciones de vuestro código ayudan a una misma tarea, pero no dependen unas de otras.  Intendad que vuestro código se descomponga en muchas funciones pequeñas e independientes entre ellas.  
+
+## Directrices para reducir el acoplamiento y aumentar la cohesión en el diseño de código, son fundamentales para mantener un código limpio, fácil de entender, modificar y reutilizar
+### Acoplamiento:  
+El objetivo es minimizar las dependencias y el entrelazado entre diferentes partes del código para hacerlo más manejable y fácil de mantener:
+- Funciones puras: Crea funciones que dependan únicamente de los argumentos que reciben y retornen resultados (sentencia return). Esto asegura que sean predecibles y no dependan de variables externas, facilitando su comprensión y mantenimiento.
+- Uso limitado de variables globales: Emplea variables globales solo cuando sea absolutamente necesario, ya que generan dependencias entre funciones, complicando la depuración, modificación y reutilización del código.
+- Evitar modificaciones de argumentos mutables: No alteres argumentos mutables a menos que el código que realiza la llamada lo espere, ya que esto crea acoplamiento fuerte entre las funciones involucradas.
+- No modificar atributos de otros módulos directamente: Cambiar directamente los atributos de otros módulos fomenta un acoplamiento fuerte. En su lugar, utiliza las funciones diseñadas por el módulo para realizar cambios o reconsidera la necesidad de alterar sus atributos.  
+
+### Cohesión:
+La cohesión trata de garantizar que cada componente (función, módulo, etc.) cumpla un propósito claro y único:
+- Propósito único por función: Cada función debe dedicarse a una única tarea claramente definida. Si el propósito de una función es demasiado amplio o tiene muchas responsabilidades, divídela en funciones más pequeñas.
+- Funciones pequeñas y concisas: Las funciones no deben ser demasiado largas ni anidadas en exceso. En Python, un diseño conciso facilita la legibilidad y evita problemas de diseño.
+
+# Variables en Python
+Una variable es una etiqueta que hace referencia a un dato almacenado en la memoria.
+En Python, las variables se crean al asignarles un valor por primera vez.
+Es recomendable definir las variables al principio del programa.
+Cada variable tiene un tipo de dato asociado.
