--- a/Python v3 Básico/MarkDown/1.3 Mutables o Inmutables.md
+++ b/Python v3 Básico/MarkDown/1.3 Mutables o Inmutables.md
@@ -1,4 +1,4 @@
-# 
+# Objetos mutables e inmutables
 
 En Python, los objetos se categorizan en mutables e inmutables dependiendo de si su estado puede cambiar después de haber sido creados. Aquí tienes un desglose:  
 
@@ -15,7 +15,7 @@ Ejemplos comunes:
 mi_lista = [1, 2, 3]  
 mi_lista[0] = 4  # Ahora mi_lista es [4, 2, 3]  
 
-## Objetos Inmutablesç
+## Objetos Inmutables
 
 Estos objetos no se pueden modificar una vez creados. Cualquier operación que parezca modificar el objeto realmente crea uno nuevo.  
 Ejemplos comunes:  
