--- a/Python v3 Básico/MarkDown/3.3 Funciones.md
+++ b/Python v3 Básico/MarkDown/3.3 Funciones.md
@@ -84,11 +84,12 @@ Estas palabras clave permiten modificar variables en ámbitos globales o no loca
 Cada vez que se llama a una función se crea un nuevo ámbito local para esa función.  
 **- Regla LEGB:**
 Python sigue la regla LEGB para buscar nombres:
-**L**ocal
-**E**nclosing
-**G**lobal
+**L**ocal  
+**E**nclosing  
+**G**lobal  
 **B**uilt-in  
-![Imagen explicativa de la regla LEGB](S:\00000 Bejob IBMskills Cursos\Repositorios\Repositorios okcee\img_reglaLEGB.jpg)
+
+![Imagen explicativa de la regla LEGB](https://github.com/okcee/Python-okcee/blob/main/Python3/img_reglaLEGB.jpg)  
 
 # Distintas maneras de paso de argumentos a una función.
 Ejemplo: def f(a, b, c):
@@ -138,6 +139,25 @@ def f(a, *, b, c): # Define 'b' y 'c' como keyword-only con el *
 print(a, b, c)  
 
 # Consideraciones de diseño al programar con funciones.
+
+En una función en Python, las entradas (inputs) y salidas (outputs) pueden ser de muchos tipos, dependiendo de cómo definas y diseñes la función. Aquí te resumo las posibilidades más comunes:
+*Entradas (inputs)*
+- Argumentos Posicionales: Valores que pasas a la función directamente en el orden en que se esperan.  
+- Argumentos por Nombre (keyword arguments): Valores que pasas especificando su nombre.  
+- Argumentos Variables: Puedes aceptar cualquier número de argumentos con *args (posicionales) y **kwargs (por nombre).
+- Variables globales.  
+- Lectura desde Fuentes Externas: Por ejemplo, datos desde un archivo, entrada del usuario (usando input()), o datos de una API.  
+
+*Salidas (outputs)*
+- Valores Retornados: Usas la palabra clave return para devolver uno o varios valores.  
+- Efectos Secundarios: En lugar de devolver un valor, una función puede realizar acciones, como imprimir texto en la consola o modificar variables globales.  
+- Sin Retorno: Si no especificas la sentencia *return*, la función devuelve *None* por defecto.
+- Argumentos mutables
+- Variables globales.  
+- Lectura desde Fuentes Externas: Por ejemplo, datos desde un archivo, entrada del usuario (usando input()), o datos de una API.  
+
+![Posibles entradas y salidas en cualquier función](https://github.com/okcee/Python-okcee/blob/main/Python3/img_posibles%20entradas%20y%20salidas%20en%20funciones.jpg)
+
 - *Cohesión:*  
 Se refiere a como se descompone un programa en pequeñas tareas individuales.
 Cada función debe tener un único propósito, preferiblemente resumible en una frase corta.
