--- a/Python v3 Básico/MarkDown/1.3 Mutables o Inmutables.md
+++ b/Python v3 Básico/MarkDown/1.3 Mutables o Inmutables.md
@@ -35,3 +35,23 @@ mi_cadena += " Mundo"  # Se crea una nueva cadena, "Hola Mundo", pero "Hola" per
 
 Rendimiento y seguridad: Los objetos inmutables son más seguros de usar en contextos concurrentes porque no pueden ser modificados accidentalmente.  
 Flexibilidad: Los objetos mutables son útiles cuando necesitas colecciones o estructuras que cambien dinámicamente.  
+
+# Mutabilidad vs. Inmutabilidad
+
+En Python, todos los datos son objetos. Cada objeto tiene un tipo y un valor. La "mutabilidad" de un objeto determina si su valor puede cambiar después de su creación.  
+
+- Objetos Inmutables: Una vez creados, su valor no se puede modificar.  
+Ejemplos: números (enteros, flotantes), cadenas, tuplas.  
+Cuando intentas modificar un objeto inmutable, en realidad se crea un nuevo objeto con el valor modificado.  
+- Objetos Mutables: Su valor puede ser modificado después de su creación.  
+Ejemplos: listas, diccionarios.  
+
+# **Función id()**
+
+La función id(objeto) devuelve la identidad de un objeto, que es un entero que garantiza ser único y constante para ese objeto durante su vida útil. En CPython (la implementación estándar de Python), esta identidad es esencialmente la dirección de memoria del objeto.  
+
+# Puntos Clave
+
+- La inmutabilidad garantiza que un objeto no pueda ser modificado accidentalmente, lo que puede prevenir errores.  
+- La mutabilidad permite modificar objetos de manera eficiente, sin necesidad de crear copias.  
+- La función id() es útil para comprender cómo Python gestiona los objetos en memoria.  
