--- a/Python Tester QA/2. Pruebas - Unitaria e integración.md
+++ b/Python Tester QA/2. Pruebas - Unitaria e integración.md
@@ -56,6 +56,24 @@ En esencia, lo que hacen las pruebas de integración en programación:
 - Dependencias externas: Prueban la interacción con bases de datos, APIs externas u otros servicios.
 - Detección de problemas de integración: Identifican errores que solo surgen cuando los componentes se combinan.
 
+# Tipos de Pruebas de Integración
+
+* Big Bang:
+  * Integra todos los módulos a la vez.
+  * Simple, pero difícil de depurar.
+* Ad Hoc:
+  * Pruebas no planificadas, para encontrar errores inesperados.
+  * Rapidas, pero no documentadas.
+* Top-Down:
+  * Prueba desde los módulos de nivel superior hacia los inferiores.
+  * Detecta errores críticos temprano.
+* Bottom-Up:
+  * Prueba desde los módulos de nivel inferior hacia los superiores.
+  * Facilita la detección y corrección de errores.
+* Hybrid (Sandwich):
+  * Combina enfoques top-down y bottom-up.
+  * Optimiza la detección de errores.
+
 ## ¿Cómo se implementan en Python?
 
 La implementación de pruebas de integración puede variar dependiendo de la arquitectura de tu aplicación, pero aquí te presento algunas estrategias comunes:
